Fixed some spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  max-width: 700px;
+  max-width: 800px;
   margin: 0 auto;
   padding: 16px;
 }
