--- a/src/Results.css
+++ b/src/Results.css
@@ -7,7 +7,7 @@
 }
 
 .Results-container {
-  margin: 30px 0 30px 0;
+  margin: 20px 0 20px 0;
 }
 
 section {
